# weather_catalog

./: .gitignore  README.md  environment.yml  launch_airflow.sh  mypy.ini  pyproject.toml  tmp.ipynb
airflow/dags/: simple_query_ui.py
notebooks/: .gitignore  test.ipynb  tmp.ipynb
python/weather_catalog/: basemodel.py
python/weather_catalog/catalog/: .gitignore  abstract_catalog.py  abstract_data_uploader.py  all_catalogs.py  catalog_selector.py
python/weather_catalog/catalog/local_catalog/: local_catalog.py  local_data_downloader.py  local_data_uploader.py
python/weather_catalog/catalog/s3/: s3_catalog.py  s3_downloader.py  s3_uploader.py
python/weather_catalog/data/: data_cube.py  zarray_data_cube.py
python/weather_catalog/enums/: coordinate.py  weather_variable.py
python/weather_catalog/query/: query.py
python/weather_catalog/query/location/: abstract_location.py
python/weather_catalog/query_resolution/: query_resolver.py
weather_catalog/: __init__.py  basemodel.py
weather_catalog/catalog/: abstract_catalog.py  abstract_data_downloader.py
weather_catalog/catalog/s3/: __init__.py
weather_catalog/catalog/s3/session/: s3_session.py
weather_catalog/data/: __init__.py  data_cube.py  zarray_data_cube.py
weather_catalog/enums/: __init__.py  frequency.py  resolution.py
weather_catalog/query/: __init__.py  point_daterange_query.py
weather_catalog/query/location/: __init__.py  point_location.py
weather_catalog/query_resolution/: __init__.py  query_resolver.py
