[project]
name="weather_catalog"
description="A way of cataloging weather data across multiple sources"
version="0.1.0"
authors=[
    { name = "Dyami Andrews" }
]
requires-python = ">=3.9,<3.12"
dependencies = [
    "loguru==0.7.2",
    "numpy==2.1.0",
    "pandas==2.2.2",
    "pydantic==2.8.2",
    "tqdm==4.64.1",
    "boto3",
    "xarray",
    "zarr",
    "netcdf4",
    "mypy",
    "s3fs",
    "pyarrow",
]

[project.optional-dependencies]
development = [
    "darker==2.1.1",
    "pytest==8.3.2",
    "pytest-sugar==1.0.0",
    "mypy==1.4.1",
]
[tool.setuptools.packages.find]
where = ["python"]